# gaussian-output-tools

./: .pre-commit-config.yaml  README.md  pyproject.toml
gaussian_output_tools/: cli.py  parser.py
gaussian_output_tools/blocks/: __init__.py  dipole.py  frequencies.py  moments.py  orientation.py  parameters.py  scf.py
