[tool.poetry]
name = "gaussian-output-tools"
version = "0.1.0"
description = "Parsers for Gaussian (G16) output"
authors = ["Tiziano Müller <tiziano.mueller@chem.uzh.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
regex = "^2021"
click = "^7"
numpy = "^1.21.2"
Pint = "^0.17"
rich = "^10.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
g16parse = 'gaussian_output_tools.cli:g16parse'

[tool.black]
target_version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
